# IOCore

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
.vim/: local.vimrc
app/: CMakeLists.txt  main.cpp
cmake/: BuildProperties.cmake
editorconfig/: local.vimrc
include/: Application.hpp  Exception.hpp  FileResource.hpp  IApplication.hpp  INonCopyable.hpp  JsonConfigFile.hpp  TomlConfigFile.hpp  TomlTable.hpp  tomlize.hpp  types.hpp
include/sys/: debuginfo.hpp  paths.hpp  platform.hpp
include/types/: containers.hpp  ctypes.hpp  errors.hpp
include/util/: bitwise.hpp  debug_print.hpp  macros.hpp  serialization.hpp  testing.hpp  toml.hpp  toml.old.hpp
src/: Application.cpp  CMakeLists.txt  Exception.cpp  FileResource.cpp  JsonConfigFile.cpp  TomlConfigFile.cpp  debuginfo.cpp  library.cpp
test/: CMakeLists.txt
tests/: Application.test.cpp  CMakeLists.txt  Exception.test.cpp  FileResource.test.cpp  JsonConfigFile.test.cpp  TomlConfigFile.test.cpp  TomlTable.test.cpp  Util.macros.test.cpp  Util.toml.test.cpp  runtime-tests.cpp
tests/test-utils/: common.hpp  serialization.hpp
